23ke-local/knot.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: knot
  labels:
    app: knot
spec:
  selector:
    app: knot
  ports:
    - protocol: TCP
      port: 53
      targetPort: 53
      name: knot-tcp
    - protocol: UDP
      port: 53
      targetPort: 53
      name: knot
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: knot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: knot
  template:
    metadata:
      labels:
        app: knot
    spec:
      containers:
        - name: knot
          image: cznic/knot
          command:
            - bash
            - -c
            - |
              cp /tmp/knot/gardener.internal.zone /storage && \
              knotd -c /etc/knot/config
          ports:
            - containerPort: 53
              protocol: TCP
            - containerPort: 53
              protocol: UDP
          volumeMounts:
            - mountPath: /etc/knot/config
              name: knot-config
              subPath: simple.conf
            - mountPath: /tmp/knot
              name: knot-zone
      volumes:
        - name: knot-config
          configMap:
            name: knot-config
        - name: knot-zone
          configMap:
            name: knot-zone
