23ke-local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: step-local-issuer
  name: myingress
  namespace: default
spec:
  rules:
  - host: schnogo.gardener.local.de
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: myservice
            port:
              number: 80
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
  - hosts:
    - schnogo.gardener.local.de
    secretName: myingress-cert # < cert-manager will store the created certificate in this secret.
